Documentation for recover.cholesterol

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(filter.variable)
 export(filter.weight)
 export(recover.alcoholism)
 export(recover.bmi)
-export(recover.colesterol)
+export(recover.cholesterol)
 export(recover.obesity)
 export(recover.smoking)
 export(recover.using_medication)
