More outcome functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(bp_cat)
 export(colhdl_cat)
 export(coltot_cat)
+export(create.endpoints)
+export(create.ep_combinate)
 export(create.ep_death)
 export(filter.bmi)
 export(filter.bp)
