ifelse for Dates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(filter.cholesterol)
 export(filter.height)
 export(filter.variable)
 export(filter.weight)
+export(ifelse.Date)
 export(recover.alcoholism)
 export(recover.bmi)
 export(recover.cholesterol)
