--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,17 @@
 Package: usrgi.lib
 Encoding: UTF-8
-Title: Tools to tidy and to present results used in research support unit of Girona.
+Title: Tools to tidy and to present results used in research support unit of
+    Girona.
 Version: 0.2
 Authors@R: c(person("Jordi", "Blanch", role = c("aut")),
              person("Marc", "Comas-Cufí", role = c("aut", "cre"),
                     email = "mcomas@idiapjgol.info"))
-Description: Tools to tidy and to present results used in research support unit of Girona.
-Depends: R (>= 3.1.0)
+Description: Tools to tidy and to present results used in research support unit
+    of Girona.
+Depends:
+    R (>= 3.1.0)
 License: GPL
 LazyData: true
 Imports:
-  dplyr (>= 0.4.2)
+    dplyr (>= 0.4.2)
+RoxygenNote: 5.0.1
