Statin level function included

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(coltot_cat)
 export(create.endpoints)
 export(create.ep_combinate)
 export(create.ep_death)
+export(create.statine_level)
 export(cuminc.mi)
 export(filter.bmi)
 export(filter.bp)
