--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ export(filter.height)
 export(filter.variable)
 export(filter.weight)
 export(fit_cox.mi)
+export(fit_coxph.mi)
+export(get_icd)
 export(ifelse.Date)
 export(incidence)
 export(recover.alcoholism)
