--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(coef,incidence)
 S3method(print,incidence)
 S3method(vcov,incidence)
 export(bp_cat)
+export(ckd.epi)
 export(colhdl_cat)
 export(coltot_cat)
 export(create.endpoints)
