--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,incidence)
 S3method(vcov,incidence)
 export(bp_cat)
 export(ckd.epi)
+export(ckd.stage)
 export(colhdl_cat)
 export(coltot_cat)
 export(create.endpoints)
