--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(coef,incidence)
 S3method(print,incidence)
 S3method(vcov,incidence)
+export(as_treated_df)
 export(bp_cat)
 export(ckd.epi)
 export(ckd.stage)
@@ -25,6 +26,7 @@ export(format_variables)
 export(get_icd)
 export(ifelse.Date)
 export(incidence)
+export(per_protocol_df)
 export(recover.alcoholism)
 export(recover.bmi)
 export(recover.cholesterol)
